--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,9 @@ MarkupSafe==2.0.1
 pycparser==2.21
 Pygments==2.11.2
 pygments-markdown-lexer==0.1.0.dev39
+pymongo==4.0.1
 pyOpenSSL==21.0.0
+python-dotenv==0.19.2
 python-telegram-bot==13.10
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
