feat: add sql storage

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,15 @@ deepmerge==1.0.1
 dulwich==0.20.30
 errbot==6.1.8
 Flask==2.0.2
+greenlet==1.1.2
 idna==3.3
 importlib-metadata==4.10.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
+jsonpickle==2.1.0
 Markdown==3.3.6
 MarkupSafe==2.0.1
+psycopg2==2.9.3
 pycparser==2.21
 Pygments==2.11.2
 pygments-markdown-lexer==0.1.0.dev39
@@ -32,6 +35,7 @@ pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
 six==1.16.0
 soupsieve==2.3.1
+SQLAlchemy==1.4.31
 tornado==6.1
 tzdata==2021.5
 tzlocal==4.1
