--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.10
 click==8.0.3
+CouchDB==1.2
 colorlog==6.6.0
 cryptography==36.0.1
 daemonize==2.5.0
@@ -32,6 +33,7 @@ python-dotenv==0.19.2
 python-telegram-bot==13.10
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
+redis==4.1.4
 requests==2.27.1
 six==1.16.0
 soupsieve==2.3.1
